--- a/package.json
+++ b/package.json
@@ -33,15 +33,18 @@
   },
   "dependencies": {
     "@types/google-map-react": "^0.23.9",
+    "@types/recompose": "^0.27.0",
     "connected-react-router": "^4.5.0",
     "dotenv-webpack": "^1.5.7",
     "google-map-react": "^1.1.0",
     "history": "^4.7.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.2.0",
     "typesafe-actions": "^2.0.4"
