--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@types/google-map-react": "^0.23.9",
+    "@types/googlemaps": "^3.30.16",
     "@types/recompose": "^0.27.0",
     "connected-react-router": "^4.5.0",
     "dotenv-webpack": "^1.5.7",
