--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@types/google-map-react": "^0.23.9",
     "@types/googlemaps": "^3.30.16",
+    "@types/lodash": "^4.14.118",
     "@types/recompose": "^0.27.0",
     "connected-react-router": "^4.5.0",
     "dotenv-webpack": "^1.5.7",
