--- a/package.json
+++ b/package.json
@@ -32,18 +32,25 @@
     "tsc:check": "tsc --noEmit --skipLibCheck && yarn tsc:check-config"
   },
   "dependencies": {
+    "@blueprintjs/core": "^3.9.0",
+    "@blueprintjs/docs-theme": "^3.0.3",
     "@types/google-map-react": "^0.23.9",
     "@types/googlemaps": "^3.30.16",
+    "@types/leaflet": "^1.2.14",
     "@types/lodash": "^4.14.118",
+    "@types/rc-slider": "^8.6.0",
+    "@types/react-leaflet": "^1.1.6",
     "@types/recompose": "^0.27.0",
     "axios": "^0.18.0",
     "connected-react-router": "^4.5.0",
     "dotenv-webpack": "^1.5.7",
     "google-map-react": "^1.1.0",
     "history": "^4.7.2",
+    "leaflet": "^1.3.4",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-google-maps": "^9.4.5",
+    "react-leaflet": "^2.1.2",
     "react-redux": "^5.0.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.2.2",
