--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,7 @@ services:
 before_install:
 - pip install --user awscli
 - export PATH=$PATH:$HOME/.local/bin
-- curl https://raw.githubusercontent.com/silinternational/ecs-deploy/master/ecs-deploy 
-- sudo tee -a /usr/bin/ecs-deploy
+- curl https://raw.githubusercontent.com/silinternational/ecs-deploy/master/ecs-deploy  | sudo tee -a /usr/bin/ecs-deploy
 - sudo chmod +x /usr/bin/ecs-deploy
 script:
 - eval $(aws ecr get-login --no-include-email --region ap-southeast-1)
